worked on styling since I was frustrated nothing else was working

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <a href="/stats">Dashboard</a>
   </nav>
   <div class="wrapper workout">
-    <header>
-      <h1>Fitness Tracker</h1>
-    </header>
+    <div class="header">
+    <img class= "logo" src="./img/FITish.png">
+    </div>
     <div class="ui container workout">
       <div class="ui raised card m-auto">
         <div class="prev-workout">
