--- a/public/exercise.html
+++ b/public/exercise.html
@@ -22,6 +22,9 @@
         <h1>Fitness Tracker</h1>
       </header>
       <div class="ui container exercise">
+        <div class="header">
+          <img class= "logo" src="./img/FITish.png">
+          </div>
         <div class="ui raised card m-auto">
           <h2>Add Your Exercise</h2>
           <form action="POST">
