--- a/public/stats.html
+++ b/public/stats.html
@@ -12,22 +12,27 @@
     <a href="/">Fitness Tracker</a>
   </nav>
   <body>
-    <div class="container mt">
-      <h1 class="text-center">Workout Dashboard</h1>
-      <div class="row mt">
-        <div class="col-md-6">
-          <canvas id="canvas"></canvas>
+    <div class="wrapper">
+      <div class="container mt">
+        <div class="header">
+          <img class= "logo" src="./img/FITish.png">
         </div>
-        <div class="col-md-6">
-          <canvas id="canvas2"></canvas>
+        <h1 class="text-center">Workout Dashboard</h1>
+        <div class="row mt">
+          <div class="col-md-6">
+            <canvas id="canvas"></canvas>
+          </div>
+          <div class="col-md-6">
+            <canvas id="canvas2"></canvas>
+          </div>
         </div>
-      </div>
-      <div class="row mt">
-        <div class="col-md-6">
-          <canvas id="canvas3"></canvas>
-        </div>
-        <div class="col-md-6">
-          <canvas id="canvas4"></canvas>
+        <div class="row mt">
+          <div class="col-md-6">
+            <canvas id="canvas3"></canvas>
+          </div>
+          <div class="col-md-6">
+            <canvas id="canvas4"></canvas>
+          </div>
         </div>
       </div>
     </div>
