--- a/public/exercise.html
+++ b/public/exercise.html
@@ -119,5 +119,6 @@
     </div>
     <script src="./js/api.js"></script>
     <script src="./js/exercise.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
