started README.md

--- a/public/stats.html
+++ b/public/stats.html
@@ -13,9 +13,9 @@
   </nav>
   <body>
     <div class="wrapper">
-      <div class="container mt">
+      <img class= "logo" src="./img/FITish.png">
+      <div class="container mt dash">
         <div class="header">
-          <img class= "logo" src="./img/FITish.png">
         </div>
         <h1 class="text-center">Workout Dashboard</h1>
         <div class="row mt">
